# rewire-extras

./: Cargo.toml  README.md  generate_proto.rs  pixi.toml
.github/workflows/: release.yaml
proto/rewire/v1/: rewire.proto
src/: diagnostics_info.rs  heartbeat.rs  lib.rs  node_info.rs  topic_info.rs
src/proto/: mod.rs
src/proto/v1/: mod.rs  rewire.rs
